css/index.css
/*------ ZEROING ------*/

*, *::before, *::after{
    box-sizing: border-box; 
}

*{
    margin: 0; 
    padding: 0; 
}

ul, ol{
    list-style: none; 
}

a {
    text-decoration-skip-ink: auto; 
}

button {
    border: none;
    box-shadow: none;
}

img, picture, svg, video, canvas{
    max-width: 100%;
    height: auto; 
    vertical-align: middle; 
    font-style: italic; 
    background-repeat: no-repeat; 
    background-size: cover;
}

/* ------ SMOOTH-ANCHOR-LINKS ------ */
html {
	scroll-behavior: smooth;
}
@media screen and (prefers-reduced-motion: reduce) {
	html {
		scroll-behavior: auto;
	}
}

body, html{
    height: 100%; 
}

/* ------ HEADERS & PARAGRAPHS ------ */
h1, h2, h3, h4, h5, h6 {
    font-size: inherit;
    font-weight: inherit;
    text-wrap: balance;
}
p {
    text-wrap: pretty;
}

/* ------ COLOR SCHEME ------ */
:root{
 
    /* ------ LIGHT-MODE COLORS------ */
    --lm-bg-body: #fff;
    --lm-bg-header: rgba(255, 255, 255, .1);
    --lm-text: #111;
    --lm-text-accent: #282;
    
        /* ------ PLAYER BUTTONS ------ */
        --lm-play: url("../img/play.png");
        --lm-pause: url("../img/pause.png");
        --lm-backwards: url("../img/backwards.png");
        --lm-forwards: url("../img/forwards.png");
    
    /* ------ DARK-MODE COLORS ------ */
    --dm-bg-body: #000;
    --dm-bg-header: rgba(255, 255, 255, .1);
    --dm-text: #eee;
    --dm-text-accent: #6d6;

        /* ------ PLAYER BUTTONS ------ */
        --dm-play: url("../img/dm-play.png");
        --dm-pause: url("../img/dm-pause.png");
        --dm-backwards: url("../img/dm-backwards.png");
        --dm-forwards: url("../img/dm-forwards.png");

    /* ------ DEFAULT ------ */
    --bg-body: var(--lm-bg-body);
    --bg-header: var(--lm-bg-header);
    --text: var(--lm-text);
    --text-accent: var(--lm-text-accent);

        /* ------ PLAYER BUTTONS ------ */
        --play: var(--lm-play);
        --pause: var(--lm-pause);
        --backwards: var(--lm-backwards);
        --forwards: var(--lm-forwards);
}

@media (prefers-color-scheme: dark) {
    :root {
        --bg-body: var(--dm-bg-body);
        --bg-header: var(--dm-bg-header);
        --text: var(--dm-text);
        --text-accent: var(--dm-text-accent);

            /* ------ PLAYER BUTTONS ------ */
            --play: var(--dm-play);
            --pause: var(--dm-pause);
            --backwards: var(--dm-backwards);
            --forwards: var(--dm-forwards);

        color-scheme: dark;
    }
}

/* ------ BODY ------ */
body {
    background-color: var(--bg-body);
    color: var(--text);
    font-family: system-ui, sans-serif;
    font-size: 1.5rem;
}
@media (min-width: 1600px) {
    body {
        font-size: 1.75rem;
    }
}
@media (min-width: 2400px) {
    body {
        font-size: 2rem;
    }
}
@media (min-width: 4000px) {
    body {
        font-size: 3rem;
    }
}

/* ------ WRAPPER ------ */
.wrapper {
    min-height: 100dvh;
    display: flex;
    flex-direction: column;
}
.wrapper > .main {
	flex-grow: 1;
}

/* ------ CONTAINER ------ */
.container {
    max-width: 75ch;
    margin: 0 auto;
    padding-inline: 10px;
}

/* ------ TITLES ------ */
.hidden-title {
    width: 0;
    height: 0;
    overflow: hidden;
    z-index: -1000;
}

/* ------ LINKS & BUTTONS------ */
.link,
.btn {
    color: var(--text);
    transition: color .3s ease;
}
.link:hover,
.btn:hover {
    color: var(--text-accent);
}
.btn {
    cursor: pointer;
}

/* ------- HEADER ------ */
.header__container {
    display: flex;
    justify-content: center;
}
.header__link {
    text-align: center;
}

/* ------ MENU ------ */
.menu__container {    
}
.menu {
}
.menu__list {
}
.menu__item {
    padding-block: 1rem;
}
.menu__link {
}

/* ------ FOOTER ------ */
.footer__container {
    margin-block: 4rem;
    align-items: center;
    text-align: center;
}

